--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.28.1",
-    "@clerk/themes": "^1.7.9",
     "@nextui-org/react": "^2.2.9",
     "@xata.io/client": "^0.28.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
